# pyseas

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
data/: color_info.json  projection_info.json  props.json
doc/: Examples.ipynb  Examples.md  Examples.py  build_map_doc.py  projection_info.md
doc/contrib/: ExamplesCharts.py  PlotGap.ipynb  PlotGap.py
pyseas/: __init__.py  _monkey_patch_cartopy.py  cm.py  colors.py  gfw_map.py  grid.py  load_fonts.py  maps.py  props.py  rasters.py  scale_bar.py  styles.py  util.py
pyseas/charts/: styles.py
pyseas/contrib/: __init__.py  def add_fishing_track.py  plot_gap.py  plot_gaps.py  plot_tracks.py
pyseas/data/: projection_info.json  props.json
pyseas/data/eezs/: README.md
pyseas/doc/: Examples.ipynb  Examples.md  Examples.py  TestChartStyle.py  build_map_doc.py  projection_info.md
pyseas/doc/contrib/: PlotGap.ipynb  PlotGap.py
pyseas/imagery/: tiles.py
pyseas/maps/: __init__.py  bivariate.py  colorbar.py  core.py  extent.py  h3_dgg.py  overlays.py  project_to_raster.py  projection.py  rasterize.py  rasters.py  scalebar.py  styles.py  ticks.py
tests/: test_rasters.py
untracked/data/: README.md
untracked/data/logos/: README.md
