[metadata]
# TODO: get an official username
name = pyseas-GFW
version = 0.1.0
author = Timothy Hochberg
author_email = tim@globalfishingwatch.org
description = A library to make GFW style maps in Python.
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/globalfishingwatch/pyseas
project_urls =
    Bug Tracker = https://github.com/globalfishingwatch/pyseas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    cartopy
    geopandas 
    geos
    numpy 
    matplotlib >= 3.3
    pandas
    scikit-image 
    pandas
    shapely
    h3

[options.extras_require]
nb = 
    jupyter
    jupytext
    pandas-gbq    



# Also need to install data...
