[metadata]
name = pyseas
version = 0.4.0
author = Timothy Hochberg
author_email = tim@globalfishingwatch.org
description = A library to make GFW style maps in Python.
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/globalfishingwatch/pyseas
project_urls =
    Bug Tracker = https://github.com/globalfishingwatch/pyseas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
package_data = 
python_requires = >=3.6
install_requires =
    cartopy
    geopandas 
    geos
    numpy 
    matplotlib >= 3.3
    pandas
    scikit-image 
    shapely
    h3
    gcsfs

[options.extras_require]
nb = 
    jupyter
    jupytext
    pandas-gbq    

[options.package_data]
pyseas = 
    data/*.json
    data/eezs/*.md
    data/eezs/*.gpkg
    data/fonts/*/*.txt
    data/fonts/*/*.md
    data/fonts/*/*.ttf
    data/logos/*.png
    doc/Examples.py
    doc/Examples.ipynb
    doc/data/*.csv.zip
    doc/contrib/*.py
    doc/contrib/*.ipynb
    doc/contrib/data/*.csv.zip